# OpenRTI

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  exampleFOM.xml
ownOpenRTI/: .gitignore  CMakeLists.txt  FOMexample.txt  README.md
ownOpenRTI/carsimc - exampleCode/src/: Car.cpp  HLAfuelType.cpp  Properties.cpp  Properties.h  ScenarioLoadedState.cpp  SimulatorConfig.h
ownOpenRTI/configs/: backup-federation.xml  config.cfg  config.xml  federation.xml  objectModelTry.xml  rtinode_config.xml
ownOpenRTI/exampleCode -carSimC Pitch/: CMakePresets.json
ownOpenRTI/exampleCode -carSimC Pitch/src/: CarFactory.cpp  CarFactory.h  CarProperties.cpp  Controller.cpp  Controller.h  FuelType.cpp  FuelType.h  HLAmodule.h  HLAposition.cpp  HLAposition.h  InteractionListener.h  LatLongHelper.h  NoScenarioState.h  Position.h  Scenario.h  SimulatorListener.h  State.cpp  State.h  StringUtils.h
ownOpenRTI/exampleCode/Portico - resturant/: ExampleCPPFederate.cpp
ownOpenRTI/foms/: FOM.xml  FOMbackup.xml  HLAstandardMIM.xml
ownOpenRTI/libs/: libFedTime.so.1.3.0  libfedtime1516.so.1.0.0  libfedtime1516e.so.1.0.0
ownOpenRTI/src/: CMakeLists.txt  FOM-backup.xml  FOM.xml  MyFederateAmbassador.cpp  MyFederateAmbassador.h  MyPositionDecoder.h  Object.xml  federateSubPositionAndSpeed.cpp  hardCodePort.cpp  main.cpp
ownOpenRTI/src/TryingStuff/: CMakeLists.txt  Federate.cpp  Federate.h  main.cpp  testFedAmb.cpp  testFedAmb.h  testFederate.cpp  testFederate.h
ownOpenRTI/src/enterReflectAttributes/: README.md
ownOpenRTI/src/myProgram/: CMakeLists.txt  MyFloat32Decoder.h  ObjectInstanceHandleHash.h  execution_treeStruct.txt
ownOpenRTI/src/newTry/: CMakeLists.txt
ownOpenRTI/src/newnewTry/: CMakeLists.txt
pythonTrial/Test1_SharedLibraryAndSockets/: CMakeLists.txt  receiveData.py  testingDataTransfer.cpp
pythonTrial/Test2_SharedVectorTry/: CMakeLists.txt  receiveData.py  sendData.cpp  sharedLibrary.cpp
src/: CMakeLists.txt  README.md
src/AdminFederate/: AdminFederate.cpp  AdminFederate.h  AdminFederateAmbassador.cpp  AdminFederateAmbassador.h  AdminFederateFunctions.h  README.md  structAdmin.h  tempStruct.h
src/CombinedShip/: Ship.h  ShipFederate.cpp  ShipFederate.h  ShipFederateAmbassador.cpp  ShipFederateAmbassador.h
src/EnemyShip/: EnemyShipFederate.cpp  EnemyShipFederate.h  EnemyShipFederateAmbassador.cpp  EnemyShipFederateAmbassador.h  Ship.h
src/MissileCreator/: MissileCreator.cpp  MissileCreator.h  MissileCreatorFederateAmbassador.cpp  MissileCreatorFederateAmbassador.h  README.md
src/MissileFederate/: MissileFederate.cpp  MissileFederate.h  MissileFederateAmbassador.cpp  MissileFederateAmbassador.h  README.md  structMissile.h  tempFileRemoveMeIfLeftBehind.h
src/MissileManagerFederate/: MissileFederate.cpp  MissileFederate.h  MissileFederateAmbassador.cpp  MissileFederateAmbassador.h  MissileManagerFederate.cpp  MissileManagerFederate.h  MissileManagerFederateAmbassador.cpp  MissileManagerFederateAmbassador.h  README_MissileManagerFederate.md  structMissile.h  tempFileRemoveMeIfLeftBehind.h
src/MissileManagerFederate/RobotCode/: RobotFederateAmbassador.cpp
src/MissileManagerFederate/include/: ActiveMissile.h  MissileManagerHelper.h
src/MultipleMissileFeds/: MissileCreator.cpp  MissileCreator.h  MissileCreatorFederateAmbassador.cpp  MissileCreatorFederateAmbassador.h
src/MyShipFederate/: MyShipFederate.cpp  MyShipFederate.h  MyShipFederateAmbassador.cpp  MyShipFederateAmbassador.h  README.md
src/MyShipFederate/Archive/: MyShipFederateAmbassador.cpp
src/OldShips/EnemyShip/: EnemyShipFederate.cpp  EnemyShipFederate.h  EnemyShipFederateAmbassador.h
src/OldShips/ShooterShipFederate/: Ship.h  ShootShipFederate.cpp  ShootShipFederate.h  ShootShipFederateAmbassador.cpp  ShootShipFederateAmbassador.h
src/ShipData/: ShipData.json
src/ShipFederate/: README.md  Ship.h  ShipFederate.cpp  ShipFederate.h  ShipFederateAmbassador.cpp  ShipFederateAmbassador.h
src/ShooterShipFederate/: Ship.h  ShootShipFederate.cpp  ShootShipFederate.h  ShootShipFederateAmbassador.cpp  ShootShipFederateAmbassador.h
src/StartUp/: CMakeLists.txt  ReadMe.md  runProgram.sh  startupForJenkins.sh
src/StartUp/inputs/: Admin.txt
src/TextToTable/: CMakeLists.txt  README.md  TextToTable.cpp
src/TextToTable/GraphVisual/: chart.js  index.html  script.js  style.css
src/TextToTable/TablesJSON/: averages.json
src/VisualRepresentation/: README.md  ReceiveData.py  SendData.cpp  SerializeData.cpp
src/VisualRepresentation/CommunicationWithPython/: CMakeLists.txt  PyLink.cpp  PyLink.h  PyLinkAmbassador.cpp  PyLinkAmbassador.h  README.md  ShipStatus.h
src/VisualRepresentation/DataFromMissile/: MissileSharedLibrary.cpp  ReceiveData.py  SendMissile.cpp
src/carProgram/: CMakeLists.txt  README.md
src/carProgram/fom/: FOM.xml
src/configs/: ship_config.xml
src/encryption/: CMakeLists.txt  HelpEncrypt.h  TEA.h  encrypt.cpp
src/encryption/encryptedData/: decryptedData.txt  encryptedData.txt
src/foms/: FOM.xml  FOM_Documentation.md  robot.xml
src/include/: Missile.h  MissileCalculator.cpp  MissileCalculator.h  MissileManagerHelper.h  MissileStatus.h  MissileTargetingSystem.h  ObjectInstanceHandleHash.h  README.md  Robot.h  ShipHelperFunctions.cpp  decodePosition.cpp  decodePosition.h  jsonParse.h  loggingFunctions.cpp  loggingFunctions.h  shipHelperFunctions.h
src/myProgram/: CMakeLists.txt  MyFederate.cpp  MyPublisher.cpp  MyShip.cpp  README.md  Robot.cpp  execution_treeStruct.txt
src/myProgram/AdminFederate/: AdminFederate.cpp  AdminFederate.h  AdminFederateAmbassador.cpp  AdminFederateAmbassador.h  AdminFederateAmbassadorHelper.h  AdminFederateFunctions.h
src/myProgram/EnemyShip/: EnemyShipFederate.cpp  EnemyShipFederate.h  EnemyShipFederateAmbassador.cpp  EnemyShipFederateAmbassador.h
src/myProgram/FomsBackup/: SOM.xml  robot.xml
src/myProgram/MissileManagerFederate/: MissileManagerFederate.cpp  MissileManagerFederate.h  (+2 more)
src/newTryProgram/: CMakeLists.txt
src/syncFederate/: syncFederate.h  syncFederateAmbassador.cpp
src/syncProgram/: CMakeLists.txt
(+295 files in other folders)
